GNOME Bugzilla – Bug 787769
retro-gtk: Keyboard keys can be stuck
Last modified: 2017-09-17 07:43:21 UTC
Sometimes when playing with the keyboard, keyboard keys tend to be "stuck". It seems that it is caused by some key presses being caught by the widget but not the corresponding releases. I suspect this to happen when the views looses focus, for example because the header bar appeared and stole the focus. To fix this I suggest to consider all keys to be released when the CoreView loses the focus.
Created attachment 359919 [details] [review] core-view: Reset inputs when losing focus This avoids key to appear as stuck by receiving the key press event but not the corresponding key release event.
Attachment 359919 [details] pushed as 3296f08 - core-view: Reset inputs when losing focus