core-view: Reset inputs when losing focus

This avoids key to appear as stuck by receiving the key press event but
not the corresponding key release event.

https://bugzilla.gnome.org/show_bug.cgi?id=787769